# SOAR-Lite-Final

./: .env.example  .gitignore  README.md  pyproject.toml
dashboard/static/: app.js  style.css
dashboard/templates/: base.html  incident_detail.html  incidents.html
docs/: adding-a-connector.md  architecture.md  design-decisions.md  implementation-checklist.md  playbook-authoring-guide.md  step-utility-analysis.md
playbooks/: bruteforce_response.yaml  malware_detection.yaml  phishing_triage.yaml
soar/: __init__.py  config.py  main.py
soar/analytics/: __init__.py  utility.py
soar/api/: alerts.py  analytics.py  dashboard.py  health.py  incidents.py  playbooks.py
soar/connectors/: __init__.py  abuseipdb.py  base.py  mock_jira.py  registry.py  shodan.py  slack.py  virustotal.py
soar/db/: __init__.py  crud.py  database.py
soar/engine/: __init__.py  executor.py  matcher.py  parser.py  state_machine.py
soar/models/: __init__.py  alert.py  incident.py  playbook.py
tests/: conftest.py
tests/integration/: __init__.py  test_alert_ingestion.py  test_analytics_summary_details.py  test_playbook_utility_endpoint.py
tests/load/: __init__.py  test_concurrent_alerts.py
tests/unit/: __init__.py  test_alerts_direct.py  test_api_analytics_direct.py  test_api_incidents_direct.py  test_connectors.py  test_database_manager.py  test_executor.py  test_main_dashboard.py  test_parser.py  test_registry.py  test_slack_connector.py  test_state_machine.py  test_utility.py  test_utility_simplified.py
