[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "soar-lite"
version = "0.1.0"
description = "Security Orchestration, Automation and Response engine built from scratch in Python"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Security Automation Engineer"}
]

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "pyyaml>=6.0.1",
    "httpx>=0.27.0",
    "simpleeval>=0.9.13",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    "websockets>=12.0.0",
    "slack-sdk>=3.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "black>=24.0.0",
]

[project.urls]
Homepage = "https://github.com/securityautomationengineer/soar-lite"
Documentation = "https://github.com/securityautomationengineer/soar-lite/docs"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.hatch.build.targets.wheel]
packages = ["soar"]
